# pimba

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  pyproject.toml
csrc/: main.cpp
csrc/addr_mappers/: lax_mapper.cpp
csrc/controllers/: lax_controller.cpp
csrc/dram_specs/: LAX.cpp
csrc/traces/: lax_trace.cpp  lax_trace.h
docs/: api.md  reproducibility.md
scripts/: draw.py  run.py
src/pimba/: __init__.py
src/pimba/accuracy/: configs.py  exp.py
src/pimba/accuracy/datasets/: __init__.py  utils.py
src/pimba/accuracy/exps/: __init__.py  utils.py
src/pimba/accuracy/models/: __init__.py  utils.py
src/pimba/accuracy/models/gla/: configuration_gla.py  gla.py  model.py  modeling_gla.py
src/pimba/accuracy/models/hgrn2/: configuration_hgrn2.py  hgrn2.py  model.py  modeling_hgrn2.py
src/pimba/accuracy/models/llama/: model.py  modeling_llama.py
src/pimba/accuracy/models/mamba2/: model.py
src/pimba/accuracy/ops/: __init__.py  fused.py  state_update.py
src/pimba/accuracy/quants/: __init__.py  bfloat16.py  e4m3.py  e5m2.py  float16.py  int8.py  mx8.py  none.py  quantize.py
src/pimba/draw/: __init__.py  exps.py  figure12.py  figure13.py  figure14.py  figure16.py  figure3.py  figure4.py  figure5.py  figure6.py  table2.py  utils.py
src/pimba/performance/: configs.py  exp.py
src/pimba/performance/devices/: __init__.py  base.py  base_pim_config.yaml  gpu.py  pim.py
src/pimba/performance/exps/: __init__.py  utils.py
src/pimba/performance/layers/: __init__.py  base.py
src/pimba/performance/models/: __init__.py  base.py  gla.py  hgrn2.py  mamba2.py  models.yaml  opt.py  retnet.py  utils.py  zamba2.py
src/pimba/performance/systems/: __init__.py  gpu.yaml  pim.yaml  system.py  utils.py
src/pimba/performance/utils/: __init__.py  file.py  register.py  trace.py
(+13 files in other folders)
